ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Statements/parserES5ForOfStatement4/input.ts.stderr
error: Unexpected initializer in for in/of loop
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Statements/parserES5ForOfStatement4/input.ts:2:10
  |
2 | for (var a = 1 of X) {
  |          ^

